Release 1.6.1+139 with performance and usability improvements
